--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
   <p class="copy">
       My Porfolio by
     <a href="https://www.facebook.com/jmcellona02" target="_blank"
-      >Jan Michael A. Cellona</a></i>
+      >Jan Michael A. Cellona</a>
   </p>
+  <p>09053482093</p>
 </footer>
 
 
