--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
   <p class="copy">
       My Porfolio by
     <a href="https://www.facebook.com/jmcellona02" target="_blank"
-      >Jan Michael A. Cellona 123</a>
-      <p></p>
+      >Jan Michael A. Cellona</a>
+      <p>09053482093</p>
   </p>
  
 </footer>
